# mcp-to-agentregistry

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package-lock.json  package.json
examples/: blockchain-collection.json
src/: cli.ts  main.rs
src/commands/: batch.ts  generate.ts  inspect.ts  publish.ts
src/lib/: artifact-builder.ts  introspector.ts  npm-fetcher.ts  registry-client.ts  types.ts
