[package]
name = "mcp2ar"
version = "0.1.0"
edition = "2024"
description = "Auto-package npm-published MCP servers for agentregistry -- generate, publish, batch, inspect"
license = "MIT"
authors = ["Purple Squirrel Media LLC"]

[[bin]]
name = "mcp2ar"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4", features = ["derive", "env"] }
urlencoding = "2"
psm-mcp-core = { path = "../psm-mcp-core/psm-mcp-core" }
psm-mcp-transport = { path = "../psm-mcp-core/psm-mcp-transport" }
psm-mcp-policy = { path = "../psm-mcp-core/psm-mcp-policy" }
